--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flavour-find-app",
+  "name": "flavour-find",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.21",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-seoul/masonry-list": "^1.4.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
+    "babel-preset-react-native": "^2.1.0",
+    "expo": "^51.0.21",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "6.7.0",
+    "nativewind": "^2.0.11",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.8.6",
+    "react-native-youtube-iframe": "^2.3.0",
+    "twrnc": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
